[package]
name = "mcu"
version = "0.1.0"
authors = ["Aydar Mingaleev <a.mingaleev@innopolis.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
socketcan = "1.7.0"
libmodbus-rs = "0.8.3"
libudev-sys = "0.1.4"

